--- a/style.css
+++ b/style.css
@@ -2,4 +2,20 @@ body{
 font-size:30px;
   background-color:ntiquewhite;
   font-family: "Georgia", serif;
+}---Yi
+
+.theme h1 {
+  font-size: 22px;
+  font-weight: 600;
+  color: #3b2f2f;
+  margin: 0;
+}----xuaner
+
+. p {
+  font-size: 17px;
+  color: #8a7f78;
+  opacity: 0;
+  line-height: 22px;
 }
+
+
